--- a/x_service/x_BL_tests/x_BL_tests.csproj
+++ b/x_service/x_BL_tests/x_BL_tests.csproj
@@ -10,5 +10,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+  </ItemGroup>
 
 </Project>
