--- a/x_service/x_endpoints/x_endpoints.csproj
+++ b/x_service/x_endpoints/x_endpoints.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="2.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageReference Include="dotenv.net" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
