--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,7 @@ $RECYCLE.BIN/
 # Rider
 .idea
 
+# Enviroment
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,dotnetcore,windows
