--- a/x_service/x_endpoints/.env
+++ b/x_service/x_endpoints/.env
@@ -1,3 +1,1 @@
-
-USERNAME = "TimoSR"
-MONGO_USER_PASSWORD = "L0EJQ70jlYqicO2A"
+MONGO_CONNECTIONSTRING = "mongodb+srv://TimoSR:L0EJQ70jlYqicO2A@project-r.vfcynkw.mongodb.net/?retryWrites=true&w=majority"
