--- a/.gitignore
+++ b/.gitignore
@@ -70,9 +70,9 @@ $RECYCLE.BIN/
 *.lnk
 
 # Rider
-.idea
+*.idea
 
 # Enviroment
-.env
+*.env
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,dotnetcore,windows
