--- a/x_service/x_endpoints/.env
+++ b/x_service/x_endpoints/.env
@@ -1,1 +1,1 @@
-MONGO_CONNECTIONSTRING = "mongodb+srv://TimoSR:L0EJQ70jlYqicO2A@project-r.vfcynkw.mongodb.net/?retryWrites=true&w=majority"
+MONGO_CONNECTIONSTRING = ""
