--- a/.github/workflows/x_service.yaml
+++ b/.github/workflows/x_service.yaml
@@ -1,29 +1,52 @@
 name: CI for Project A
 
 on:
-  push:
-    paths:
-      - 'x_service/**'
-  pull_request:
-    paths:
-      - 'x_service/**'
+  workflow_dispatch:
+  #push:
+  #  paths:
+  #    - 'x_service/**'
+  #pull_request:
+  #  paths:
+  #    - 'x_service/**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
+    
     - uses: actions/checkout@v2
-
-    - name: Test
+    
+    - name: Setup .NET 6
       run: |
-        cd project-a
+        wget https://packages.microsoft.com/config/ubuntu/23.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
+        sudo dpkg -i packages-microsoft-prod.deb
+        sudo apt-get update
+        sudo apt-get install -y apt-transport-https
+        sudo apt-get update
+        sudo apt-get install -y dotnet-sdk-6.0
+        
+    - name: Run Tests
+      run: |
         dotnet test
+      env:
+        DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
-    - name: Build Docker image
-      if: success()
-      run: |
-        cd project-a
-        docker build -t my-repo/my-image:dev-${{ github.sha }} .
-        echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        docker push my-repo/my-image:dev-${{ github.sha }}
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          #Github will hold the secrets
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: 00tir2009/x_service:latest
