--- a/.github/workflows/x_service.yaml
+++ b/.github/workflows/x_service.yaml
@@ -17,16 +17,13 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Setup .NET 7
-      run: |
-        wget https://packages.microsoft.com/config/ubuntu/23.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
-        sudo dpkg -i packages-microsoft-prod.deb
-        sudo apt-get update
-        sudo apt-get install -y apt-transport-https
-        sudo apt-get update
-        sudo apt-get install -y dotnet-sdk-7.0
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '7.0.x'
         
     - name: Run Tests
       run: |
+        dotnet restore
         dotnet test
       env:
         DOTNET_CLI_TELEMETRY_OPTOUT: 1
