--- a/.github/workflows/x_service.yaml
+++ b/.github/workflows/x_service.yaml
@@ -12,14 +12,17 @@ on:
 jobs:
   test_application:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dotnet: ['7.x.x']
     steps:
     
     - uses: actions/checkout@v2
     
-    - name: Setup .NET 7
+    - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '7.0.x'
+        dotnet-version: ${{ matrix.dotnet }}
         
     - name: Run Tests
       run: |
