--- a/.github/workflows/x_service.yaml
+++ b/.github/workflows/x_service.yaml
@@ -26,6 +26,7 @@ jobs:
         
     - name: Run Tests
       run: |
+        cd x_service
         dotnet restore
         dotnet test
       env:
