--- a/.github/workflows/x_service.yaml
+++ b/.github/workflows/x_service.yaml
@@ -36,18 +36,22 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test_application]
     steps:
-      -
-        name: Set up Docker Buildx
+
+      - name: Where are we
+        run: |
+          ls
+      
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
+     
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           #Github will hold the secrets
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      
+      - name: Build and push
         uses: docker/build-push-action@v3
         with:
           push: true
