--- a/.github/workflows/x_service.yaml
+++ b/.github/workflows/x_service.yaml
@@ -39,9 +39,9 @@ jobs:
 
       - uses: actions/checkout@v2
 
-      - name: Where are we
-        run: |
-          ls
+      # - name: Where are we
+      #   run: |
+      #     ls
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
