--- a/.github/workflows/PROD_x_service.yaml
+++ b/.github/workflows/PROD_x_service.yaml
@@ -1,16 +1,17 @@
 name: PROD CI for x_service
 
 on:
-  push:
-    tags:
-        - 'v*'
-    paths:
-      - 'x_service/**'
   pull_request:
+    types: [opened, synchronize, closed]
+    branches:
+    - master
     tags:
       - 'v*'
     paths:
       - 'x_service/**'
+  workflow_dispatch:
+    tags:
+        - 'v*'
 
 jobs:
   test_application:
@@ -37,6 +38,7 @@ jobs:
 
   docker:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
     needs: [test_application]
     steps:
 
@@ -55,6 +57,16 @@ jobs:
           #Github will hold the secrets
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Extract version or SHA
+        id: get_version
+        run: |
+          if [[ $GITHUB_REF == refs/tags/v* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/v}
+          else
+            VERSION=${GITHUB_SHA::7}
+          fi
+          echo ::set-output name=VERSION::$VERSION
       
       - name: Build and push
         uses: docker/build-push-action@v3
@@ -62,4 +74,4 @@ jobs:
           context: ./x_service  # path to the directory that contains the Dockerfile
           file: ./x_service/Dockerfile  # path to the Dockerfile
           push: true
-          tags: 00tir2009/x_service_PROD:${{ github.ref }}
+          tags: 00tir2009/x_service_PROD:${{ steps.get_version.outputs.VERSION }}
