--- a/.github/workflows/DEV_x_service.yaml
+++ b/.github/workflows/DEV_x_service.yaml
@@ -12,7 +12,7 @@ on:
   #    - 'x_service/**'
 
 jobs:
-  test_application:
+  test_dotnet_core:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -34,7 +34,7 @@ jobs:
       env:
         DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
-  docker:
+  build_push_docker:
     runs-on: ubuntu-latest
     needs: [test_application]
     steps:
@@ -71,4 +71,4 @@ jobs:
           context: ./x_service  # path to the directory that contains the Dockerfile
           file: ./x_service/Dockerfile  # path to the Dockerfile
           push: true
-          tags: 00tir2009/x_service_DEV:${{ steps.get_version.outputs.VERSION }}
+          tags: 00tir2009/x_service_dev:${{ steps.get_version.outputs.VERSION }}
