--- a/.github/workflows/DEV_x_service.yaml
+++ b/.github/workflows/DEV_x_service.yaml
@@ -36,7 +36,7 @@ jobs:
 
   build_push_docker:
     runs-on: ubuntu-latest
-    needs: [test_application]
+    needs: [test_dotnet_core]
     steps:
 
       - uses: actions/checkout@v2
