--- a/.github/workflows/Build_Local_Container.yaml
+++ b/.github/workflows/Build_Local_Container.yaml
@@ -1,39 +1,12 @@
-name: DEV CI for x_service
+name: Build Local Container
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-    - develop
-    paths:
-    - 'x_service/**'
 
 jobs:
-  test_dotnet_core:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        dotnet: ['7.x.x']
-    steps:
-    
-    - uses: actions/checkout@v2
-    
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: ${{ matrix.dotnet }}
-        
-    - name: Run Tests
-      run: |
-        cd x_service
-        dotnet restore
-        dotnet test
-      env:
-        DOTNET_CLI_TELEMETRY_OPTOUT: 1
-
   build_push_docker:
     runs-on: ubuntu-latest
-    needs: [test_dotnet_core]
+    if: github.event.pull_request.merged == true
     steps:
 
       - uses: actions/checkout@v2
@@ -51,7 +24,7 @@ jobs:
           #Github will hold the secrets
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
+
       - name: Extract version or SHA
         id: get_version
         run: |
@@ -69,4 +42,4 @@ jobs:
           context: ./x_service  # path to the directory that contains the Dockerfile
           file: ./x_service/Dockerfile  # path to the Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/x_service_dev:${{ env.VERSION }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/x_service_prod:${{ env.VERSION }}
