--- a/.github/workflows/DEV_x_service.yaml
+++ b/.github/workflows/DEV_x_service.yaml
@@ -9,7 +9,7 @@ on:
     branches:
     - develop
     paths:
-    - 'x_service/**'
+    - '${{ env.SERVICE_NAME }}/**'
 
 jobs:
   test_dotnet_core:
@@ -28,7 +28,7 @@ jobs:
         
     - name: Run Tests
       run: |
-        cd x_service
+        cd ${{ env.SERVICE_NAME }}
         dotnet restore
         dotnet test
       env:
@@ -64,12 +64,11 @@ jobs:
             VERSION=${GITHUB_SHA::7}
           fi
           echo "VERSION=$VERSION" >> $GITHUB_ENV
-
       
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: ./x_service  # path to the directory that contains the Dockerfile
-          file: ./x_service/Dockerfile  # path to the Dockerfile
+          context: ./${{ env.SERVICE_NAME }}  # path to the directory that contains the Dockerfile
+          file: ./${{ env.SERVICE_NAME }}/Dockerfile  # path to the Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.SERVICE_NAME }}_dev:${{ env.VERSION }}
