--- a/.github/workflows/DEV_x_service.yaml
+++ b/.github/workflows/DEV_x_service.yaml
@@ -1,15 +1,17 @@
 name: DEV CI for x_service
 
+# Update the Service Name to of the Service Folder
+env:
+  SERVICE_NAME: x_service
+
 on:
   workflow_dispatch:
   push:
     branches:
     - develop
     paths:
-    - '${{ env.SERVICE_NAME }}/**'
-
-env:
-  SERVICE_NAME: x_service
+    # Path needs to be chanced
+    - 'x_service/**'
 
 jobs:
   test_dotnet_core:
