--- a/.github/workflows/PROD_x_service.yaml
+++ b/.github/workflows/PROD_x_service.yaml
@@ -1,5 +1,9 @@
 name: PROD CI for x_service
 
+# Update the Service Name to of the Service Folder
+env:
+  SERVICE_NAME: x_service
+
 on:
   pull_request:
     types: [opened, synchronize, closed]
@@ -8,6 +12,7 @@ on:
     tags:
       - 'v*'
     paths:
+    # Path needs to be changed to fit Service Folder (As it does not support env)
       - 'x_service/**'
   workflow_dispatch:
 
@@ -28,7 +33,7 @@ jobs:
         
     - name: Run Tests
       run: |
-        cd x_service
+        cd ${{ env.SERVICE_NAME }}
         dotnet restore
         dotnet test
       env:
@@ -70,7 +75,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: ./x_service  # path to the directory that contains the Dockerfile
-          file: ./x_service/Dockerfile  # path to the Dockerfile
+          context: ./${{ env.SERVICE_NAME }}  # path to the directory that contains the Dockerfile
+          file: ./${{ env.SERVICE_NAME }}/Dockerfile  # path to the Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/x_service_prod:${{ env.VERSION }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.SERVICE_NAME }}_prod:${{ env.VERSION }}
