Fixing Workflow Docs

--- a/.github/workflows/DEV_x_service.yaml
+++ b/.github/workflows/DEV_x_service.yaml
@@ -1,8 +1,15 @@
-name: DEV CI for x_service
+#Service name and the Folder name should be the same on git!
 
-# Update the Service Name to of the Service Folder
+# Update the marked areas with x_service to eg. leaderboard_service...
+
+############################
+name: DEV CI for x_service 
+############################
+
+############################
 env:
   SERVICE_NAME: x_service
+############################
 
 on:
   workflow_dispatch:
@@ -11,7 +18,9 @@ on:
     - develop
     paths:
     # Path needs to be changed to fit Service Folder (As it does not support env)
+    ############################
     - 'x_service/**'
+    ############################
 
 jobs:
   test_dotnet_core:
