--- a/.github/workflows/DEV_x_service.yaml
+++ b/.github/workflows/DEV_x_service.yaml
@@ -1,4 +1,5 @@
-#Service name and the Folder name should be the same on git!
+# Service name and the Folder name should be the same on git!
+# Remeber to update Service name on yaml file aswell.
 
 # Update the marked areas with x_service to eg. leaderboard_service...
 
