--- a/.github/workflows/PROD_x_service.yaml
+++ b/.github/workflows/PROD_x_service.yaml
@@ -1,9 +1,10 @@
 #Service name and the Folder name should be the same on git!
+# Remeber to update Service name on yaml file aswell.
 
 # Update the marked areas with x_service to eg. leaderboard_service...
 
 ############################
-name: DEV CI for x_service 
+name: PROD CI for x_service 
 ############################
 
 ############################
