--- a/.github/workflows/DEV_x_service.yaml
+++ b/.github/workflows/DEV_x_service.yaml
@@ -59,6 +59,14 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
      
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -84,3 +92,5 @@ jobs:
           file: ./${{ env.SERVICE_NAME }}/Dockerfile  # path to the Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.SERVICE_NAME }}_dev:${{ env.VERSION }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
