--- a/.github/workflows/PROD_x_service.yaml
+++ b/.github/workflows/PROD_x_service.yaml
@@ -75,12 +75,11 @@ jobs:
         id: get_version
         run: |
           if [[ $GITHUB_REF == refs/tags/v* ]]; then
-            VERSION=${GITHUB_REF#refs/tags/v}
+            VERSION=${GITHUB_REF#refs/tags/}
           else
             VERSION=${GITHUB_SHA::7}
           fi
           echo "VERSION=$VERSION" >> $GITHUB_ENV
-
       
       - name: Build and push
         uses: docker/build-push-action@v4
