Done, it is friday.

--- a/x_service/x_endpoints/.env.example
+++ b/x_service/x_endpoints/.env.example
@@ -1,20 +1,23 @@
 # Service Name
 ##########################################
-SERVICE_NAME=X_Service
+SERVICE_NAME=x-service
 
 # Environment
 ##########################################
 ENVIRONMENT=Development
 
-# Topics
+# Published Topics
 ##########################################
-TOPIC_PRODUCT_UPDATES=x-service-product-updates-v1
-TOPIC_ORDER_UPDATES=x-service-order-updates-v1
+TOPIC_PRODUCT_UPDATES=product-updates-v1
+TOPIC_ORDER_UPDATES=order-updates-v1
+
+# Subscribed Topics
+##########################################
 
 # Database Config
 ##########################################
 # This should be set as a local env variable not as a secret
-MONGODB_DEVELOPMENT_DB=X_Service_Development
+MONGODB_DB=Development
 # This is a secret
 MONGODB_CONNECTION_STRING=
 
