--- a/x_service/x_endpoints/.env.example
+++ b/x_service/x_endpoints/.env.example
@@ -2,7 +2,7 @@
 ##########################################
 SERVICE_NAME=x-service
 
-# Environment
+# Environment: Development, Production
 ##########################################
 ENVIRONMENT=Development
 
