--- a/Tobias/gameServer_service/x_endpoints/x_endpoints.csproj
+++ b/Tobias/gameServer_service/x_endpoints/x_endpoints.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <NoWarn>nullable</NoWarn>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
