--- a/Tobias/gameServer_service/x_endpoints/x_endpoints.csproj
+++ b/Tobias/gameServer_service/x_endpoints/x_endpoints.csproj
@@ -33,4 +33,16 @@
     <ProjectReference Include="..\x_lib\x_lib.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Compile Remove="GameObjectLibrary\Items\Ores\Ores.cs" />
+    <Compile Remove="DomainModels\Equipments\Weapon.cs" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="GameObjectLibrary\Equipment\Weapon\TwoHander\" />
+  </ItemGroup>
+
+
 </Project>
