Found Standard Solution For Events

--- a/x_service/x_endpoints/x_endpoints.csproj
+++ b/x_service/x_endpoints/x_endpoints.csproj
@@ -35,4 +35,10 @@
   </ItemGroup>
 
 
+
+  <ItemGroup>
+    <Folder Include="EventMessages\" />
+    <Folder Include="EventModels\Interfaces\" />
+  </ItemGroup>
+
 </Project>
