--- a/x_service/x_endpoints/x_endpoints.csproj
+++ b/x_service/x_endpoints/x_endpoints.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Folder Include="EventMessages\" />
     <Folder Include="EventModels\Interfaces\" />
+    <Folder Include="Tools\DeSerializers\" />
   </ItemGroup>
 
 </Project>
