--- a/x_service/x_endpoints/.env.example
+++ b/x_service/x_endpoints/.env.example
@@ -7,6 +7,7 @@ SERVICE_NAME=local-x-service
 ENVIRONMENT=Development
 
 # Published Topics
+# !!!Needs to follow the naming of the event models created!!!
 ##########################################
 TOPIC_PRODUCT_UPDATES=product-updates-v1
 TOPIC_ORDER_UPDATES=order-updates-v1
