--- a/x_service/x_endpoints/x_endpoints.csproj
+++ b/x_service/x_endpoints/x_endpoints.csproj
@@ -38,7 +38,8 @@
 
   <ItemGroup>
     <Folder Include="EventMessages\" />
-    <Folder Include="EventModels\Interfaces\" />
+    <Folder Include="EventModels\" />
+    <Folder Include="Tools\EventPublisher\" />
   </ItemGroup>
 
 </Project>
