--- a/x_service/x_endpoints/x_endpoints.csproj
+++ b/x_service/x_endpoints/x_endpoints.csproj
@@ -38,6 +38,7 @@
 
   <ItemGroup>
     <Folder Include="EventModels\" />
+    <Folder Include="Registration\Repositories\" />
   </ItemGroup>
 
 </Project>
