--- a/.github/workflows/DEV_gameServer_service.yaml
+++ b/.github/workflows/DEV_gameServer_service.yaml
@@ -42,7 +42,7 @@ jobs:
       run: |
         cd ${{ env.SERVICE_NAME }}
         dotnet restore
-        dotnet test
+        dotnet test x_service.sln
       env:
         DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
