--- a/.github/workflows/PROD_x_service.yaml
+++ b/.github/workflows/PROD_x_service.yaml
@@ -45,9 +45,10 @@ jobs:
       run: |
         cd ${{ env.SERVICE_NAME }}
         dotnet restore
-        dotnet test
+        dotnet test x_service.sln
       env:
         DOTNET_CLI_TELEMETRY_OPTOUT: 1
+
 
   build_push_docker:
     runs-on: ubuntu-latest
