--- a/.github/workflows/DEV_gameServer_service.yaml
+++ b/.github/workflows/DEV_gameServer_service.yaml
@@ -38,13 +38,19 @@ jobs:
       with:
         dotnet-version: ${{ matrix.dotnet }}
         
-    - name: Run Tests
-      run: |
-        cd ${{ env.SERVICE_NAME }}
-        dotnet restore
-        dotnet test x_service.sln
+    - name: Change Directory
+      run: cd ${{ env.SERVICE_NAME }}
+
+    - name: Restore Dependencies
+      run: dotnet restore x_service.sln
       env:
         DOTNET_CLI_TELEMETRY_OPTOUT: 1
+
+    - name: Run Tests
+      run: dotnet test x_service.sln
+      env:
+        DOTNET_CLI_TELEMETRY_OPTOUT: 1
+
 
   build_push_docker:
     runs-on: ubuntu-latest
