--- a/.github/workflows/DEV_x_service.yaml
+++ b/.github/workflows/DEV_x_service.yaml
@@ -37,17 +37,12 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: ${{ matrix.dotnet }}
-        
-    - name: Change Directory
-      run: cd ${{ env.SERVICE_NAME }}
-
-    - name: Restore Dependencies
-      run: dotnet restore x_service.sln
-      env:
-        DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
     - name: Run Tests
-      run: dotnet test x_service.sln
+      run: |
+        cd ${{ env.SERVICE_NAME }}
+        dotnet restore x_service.sln
+        dotnet test x_service.sln
       env:
         DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
