--- a/.github/workflows/PROD_gameServer_service.yaml
+++ b/.github/workflows/PROD_gameServer_service.yaml
@@ -41,19 +41,13 @@ jobs:
       with:
         dotnet-version: ${{ matrix.dotnet }}
         
-    - name: Change Directory
-      run: cd ${{ env.SERVICE_NAME }}
-
-    - name: Restore Dependencies
-      run: dotnet restore x_service.sln
-      env:
-        DOTNET_CLI_TELEMETRY_OPTOUT: 1
-
     - name: Run Tests
-      run: dotnet test x_service.sln
+      run: |
+        cd ${{ env.SERVICE_NAME }}
+        dotnet restore x_service.sln
+        dotnet test x_service.sln
       env:
         DOTNET_CLI_TELEMETRY_OPTOUT: 1
-
 
   build_push_docker:
     runs-on: ubuntu-latest
