--- a/x_service/Dockerfile
+++ b/x_service/Dockerfile
@@ -4,17 +4,17 @@ WORKDIR /app
 
 # Copy csproj and restore as distinct layers
 COPY "x_service_no_tests.sln" .
-COPY "x_API/x_API.csproj" "x_API/"
-COPY "x_Lib/x_Lib.csproj" "x_Lib/"
+COPY "x_App/x_App.csproj" "x_App/"
+COPY "x_Domain/x_Domain.csproj" "x_Domain/"
 RUN dotnet restore
 
 # Copy everything else and build
 COPY . .
-RUN dotnet publish "x_API/x_API.csproj" -c Release -o out
+RUN dotnet publish "x_App/x_App.csproj" -c Release -o out
 
 # Runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:7.0
 WORKDIR /app
 ENV ASPNETCORE_URLS=http://+:8080
 COPY --from=build-env /app/out .
-ENTRYPOINT [ "dotnet", "x_API.dll" ]
+ENTRYPOINT [ "dotnet", "x_App.dll" ]
