--- a/x_service/x_Unit_tests/x_Unit_tests.csproj
+++ b/x_service/x_Unit_tests/x_Unit_tests.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\x_Lib\x_Lib.csproj" />
+      <ProjectReference Include="..\x_Domain\x_Domain.csproj" />
     </ItemGroup>
 
 </Project>
