--- a/x_service/x_App/x_App.csproj
+++ b/x_service/x_App/x_App.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ServiceLibrary\ServiceLibrary.csproj" />
     <ProjectReference Include="..\x_Domain\x_Domain.csproj" />
   </ItemGroup>
   
