--- a/x_service/Integration_Tests/Integration_Tests.csproj
+++ b/x_service/Integration_Tests/Integration_Tests.csproj
@@ -24,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\x_App\x_App.csproj" />
+      <ProjectReference Include="..\Application\Application.csproj" />
     </ItemGroup>
 
 </Project>
