--- a/x_service/Dockerfile
+++ b/x_service/Dockerfile
@@ -4,8 +4,9 @@ WORKDIR /app
 
 # Copy csproj and restore as distinct layers
 COPY "x_service_no_tests.sln" .
-COPY "x_App/x_App.csproj" "x_App/"
-COPY "x_Domain/x_Domain.csproj" "x_Domain/"
+COPY "Application/Application.csproj" "Application/"
+COPY "Domain/Domain.csproj" "Domain/"
+COPY "Infrastructure/Infrastructure.csproj" "Infrastructure/"
 RUN dotnet restore
 
 # Copy everything else and build
