--- a/Tim/Authentication_service/Application/Application.csproj
+++ b/Tim/Authentication_service/Application/Application.csproj
@@ -34,5 +34,9 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\EventEndpoints\" />
+  </ItemGroup>
   
 </Project>
