Making the code easier to read

--- a/Tim/Authentication_service/Infrastructure/Infrastructure.csproj
+++ b/Tim/Authentication_service/Infrastructure/Infrastructure.csproj
@@ -38,6 +38,7 @@
 
     <ItemGroup>
       <Folder Include="Registrations\" />
+      <Folder Include="Utilities\TokenGenerator\" />
     </ItemGroup>
 
 </Project>
