--- a/Tim/Authentication_service/Domain/Domain.csproj
+++ b/Tim/Authentication_service/Domain/Domain.csproj
@@ -10,5 +10,8 @@
     <PackageReference Include="MongoDB.Bson" Version="2.20.0" />
     <PackageReference Include="protobuf-net.Core" Version="3.2.26" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ValueObject\" />
+  </ItemGroup>
 
 </Project>
