--- a/x_service/Infrastructure/Infrastructure.csproj
+++ b/x_service/Infrastructure/Infrastructure.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="DotNetEnv" Version="2.5.0" />
+        <PackageReference Include="Google.Apis.Auth" Version="1.62.0" />
         <PackageReference Include="Google.Cloud.PubSub.V1" Version="3.6.0" />
         <PackageReference Include="Google.Protobuf" Version="3.23.4" />
         <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="6.0.0" />
@@ -27,6 +28,7 @@
         <PackageReference Include="StackExchange.Redis.Extensions.Protobuf" Version="9.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
         <PackageReference Include="protobuf-net" Version="3.2.26" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
