--- a/Tim/Profile_service/Application/Application.csproj
+++ b/Tim/Profile_service/Application/Application.csproj
@@ -36,5 +36,9 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DataSeeders\" />
+  </ItemGroup>
   
 </Project>
