--- a/.github/workflows/DEV_authentication_service.yaml
+++ b/.github/workflows/DEV_authentication_service.yaml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet: ['7.x.x', '8.x.x']
+        dotnet: ['8.x.x']
     steps:
     
     - uses: actions/checkout@v3
