--- a/.github/workflows/PROD_x_service.yaml
+++ b/.github/workflows/PROD_x_service.yaml
@@ -1,7 +1,7 @@
 # Service name and the Folder name should be the same on git!
 # Remember to update Service name on yaml file aswell.
 
-# Update the marked areas with x_service to eg. leaderboard_service...
+# Update the marked areas with x_service to eg. leaderboard_service... (The name needs to be small)
 
 ############################
 name: PROD CI for x_service 
