Services working again

--- a/Tim/X_service/Application/.env.example
+++ b/Tim/X_service/Application/.env.example
@@ -2,23 +2,20 @@
 ##########################################
 SERVICE_NAME=local-x-service
 
+# URL FOR SERVICE HOST (Should end without a '/')
+# This is unique for every service
+##########################################
+HOST_URL=h
+
 # Environment: Development, Production
 ##########################################
 ENVIRONMENT=Development
 
-# Published Topics
-# !!!Needs to follow the naming of the event models created!!!
+# JWT KEY
 ##########################################
-TOPIC_PRODUCT_UPDATES=product-updates-v1
-TOPIC_ORDER_UPDATES=order-updates-v1
-
-# Subscribed Topics
-##########################################
-SUBSCRIBE_PRODUCT_UPDATES=x-service-product-updates-v1
-
-# Push Delivery Endpoints
-##########################################
-ENDPOINT_PRODUCT_UPDATES=https://riftgate.ngrok.io/api/PubSub/Subscription1
+JWT_KEY=
+JWT_ISSUER=$SERVICE_NAME
+JWT_AUDIENCE=Riftgate-Customer
 
 # Database Config
 ##########################################
@@ -30,4 +27,24 @@ MONGODB_CONNECTION_STRING=
 # This is only used on local development, and is auto called by the library.
 PUBSUB_EMULATOR_HOST=localhost:8085
 # This is automatically set when deployed on the cloud.
-GOOGLE_CLOUD_PROJECT=project-r-393911
+GOOGLE_CLOUD_PROJECT=
+
+# Redis
+##########################################
+#REDIS_CONNECTION_STRING=localhost:6379
+REDIS_CONNECTION_STRING=
+
+# Old Config (For reference only) #
+
+# Published Topics
+# !!!Needs to follow the naming of the event models created!!!
+##########################################
+# TOPIC_PRODUCT_UPDATED=Product
+# TOPIC_ORDER_UPDATED=OrderUpdated
+
+# Subscribed Topics & Push Delivery Endpoints
+##########################################
+# PULL_SUBSCRIBE_PRODUCT_UPDATES=local-x-service-ProductCreatedTopic
+# PUSH_SUBSCRIBE_PRODUCT_UPDATES=local-x-service-ProductDeletedTopic
+# PUSH_ENDPOINT_PRODUCT_UPDATES=https://riftgate.ngrok.io/api/PubSub/Subscription1
+##########################################
