--- a/Tim/Authentication_service/Domain/Domain.csproj
+++ b/Tim/Authentication_service/Domain/Domain.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="protobuf-net.Core" Version="3.2.26" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="DomainModels\Enums\" />
     <Folder Include="ValueObject\" />
   </ItemGroup>
 
