--- a/Tim/Authentication_service/Infrastructure/Infrastructure.csproj
+++ b/Tim/Authentication_service/Infrastructure/Infrastructure.csproj
@@ -37,7 +37,7 @@
 
 
     <ItemGroup>
-      <Folder Include="Registrations\" />
+      <Folder Include="_Registration\" />
     </ItemGroup>
 
 </Project>
