--- a/Tim/Authentication_service/_CommonLibrary/_CommonLibrary.csproj
+++ b/Tim/Authentication_service/_CommonLibrary/_CommonLibrary.csproj
@@ -7,4 +7,8 @@
         <RootNamespace>_CommonLibrary</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Patterns\RegistrationHooks\GraphQL\" />
+    </ItemGroup>
+
 </Project>
