Getting ready to split service

--- a/Tim/Authentication_service/Domain/Domain.csproj
+++ b/Tim/Authentication_service/Domain/Domain.csproj
@@ -15,6 +15,7 @@
     <Folder Include="UserAuthentication\Enums\" />
     <Folder Include="UserAuthentication\Events\" />
     <Folder Include="UserAuthentication\Services\" />
+    <Folder Include="UserAuthentication\Utilities\" />
     <Folder Include="UserAuthentication\ValueObjects\" />
     <Folder Include="Product\Entities\" />
     <Folder Include="Product\Enums\" />
