--- a/Tim/Authentication_service/_CommonLibrary/_CommonLibrary.csproj
+++ b/Tim/Authentication_service/_CommonLibrary/_CommonLibrary.csproj
@@ -11,4 +11,8 @@
       <Folder Include="Patterns\RegistrationHooks\GraphQL\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
 </Project>
