--- a/Tim/Authentication_service/Application/Application.csproj
+++ b/Tim/Authentication_service/Application/Application.csproj
@@ -37,7 +37,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
-    <ProjectReference Include="..\_CommonLibrary\_CommonLibrary.csproj" />
+    <ProjectReference Include="..\_SharedKernel\_SharedKernel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
