--- a/Tim/Authentication_service/Domain/Domain.csproj
+++ b/Tim/Authentication_service/Domain/Domain.csproj
@@ -12,21 +12,17 @@
     <PackageReference Include="protobuf-net.Core" Version="3.2.26" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Events\UserAuthentication\" />
     <Folder Include="UserAuthentication\Enums\" />
     <Folder Include="UserAuthentication\Events\" />
     <Folder Include="UserAuthentication\Services\" />
     <Folder Include="UserAuthentication\Utilities\" />
     <Folder Include="UserAuthentication\ValueObjects\" />
-    <Folder Include="Product\Entities\" />
-    <Folder Include="Product\Enums\" />
-    <Folder Include="Product\Repositories\" />
-    <Folder Include="Product\Services\" />
-    <Folder Include="Product\ValueObjects\" />
     <Folder Include="UserManagement\Enums\" />
     <Folder Include="UserManagement\ValueObjects\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\_CommonLibrary\_CommonLibrary.csproj" />
+    <ProjectReference Include="..\_SharedKernel\_SharedKernel.csproj" />
   </ItemGroup>
 
 </Project>
