Code Broken Up Into 2 Services

--- a/Tim/Authentication_service/Application/Application.csproj
+++ b/Tim/Authentication_service/Application/Application.csproj
@@ -42,6 +42,7 @@
 
   <ItemGroup>
     <Folder Include="AppServices\V2\" />
+    <Folder Include="Controllers\GraphQL\GraphQL\" />
     <Folder Include="Controllers\REST\V2\" />
   </ItemGroup>
   
