Fixing Event Management

--- a/Tim/UserManagement_service/Domain/Domain.csproj
+++ b/Tim/UserManagement_service/Domain/Domain.csproj
@@ -14,6 +14,8 @@
   <ItemGroup>
     <Folder Include="UserManagement\ValueObjects\" />
     <Folder Include="_Shared\" />
+    <Folder Include="_Shared\Events\Subscribed\" />
+    <Folder Include="_Shared\Events\Topics\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\_SharedKernel\_SharedKernel.csproj" />
