--- a/.github/workflows/DEV_game_cms_service.yaml
+++ b/.github/workflows/DEV_game_cms_service.yaml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet: ['7.x.x']
+        dotnet: ['7.x.x', '8.x.x']
     steps:
     
     - uses: actions/checkout@v3
@@ -37,7 +37,7 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: ${{ matrix.dotnet }}
-        
+
     - name: Run Tests
       run: |
         cd ${{ env.SERVICE_NAME }}
